--- a/db.yaml
+++ b/db.yaml
@@ -1,5 +1,5 @@
 -name: configure DB server
-  hosts: db
+  host: db
   become: yes
   vars:
    login_host: db.rlsu.shop
@@ -23,7 +23,7 @@
       filter: version
     ignore_errors: yes
     register: mysql_connection_output
-    
+
   -name: print output
   ansible.builtin.debug:
     msg: "output:  {{ mysql_connection_output }}"
