--- a/db.yaml
+++ b/db.yaml
@@ -1,5 +1,5 @@
 - name: configure DB server
-  hosts: db_servers
+  hosts: db
   become: yes
   vars:
    login_host: db.rlsu.shop
@@ -24,6 +24,6 @@
     ignore_errors: yes
     register: mysql_connection_output
 
-  -name: print output
+  - name: print output
   ansible.builtin.debug:
     msg: "output:  {{ mysql_connection_output }}"
