--- a/db.yaml
+++ b/db.yaml
@@ -15,6 +15,14 @@
       state: started
       enables: yes
 
+  - name: install python mysql dependencies
+    ansible.builtin.pip:
+      name: 
+      - PyMYSQL
+      -cryptography
+      -executable: pip3.9
+
+
   - name: check DB connection 
     community.mysql.mysql_info:
       login _user: root
