--- a/db.yaml
+++ b/db.yaml
@@ -18,9 +18,9 @@
   - name: install python mysql dependencies
     ansible.builtin.pip:
       name: 
-      - PyMYSQL
-      -cryptography
-      -executable: pip3.9
+      - PyMySQL
+      - cryptography
+      executable: pip3.9
 
 
   - name: check DB connection 
