--- a/db.yaml
+++ b/db.yaml
@@ -3,6 +3,11 @@
   become: yes
   vars:
    login_host: db.rlsu.shop
+  vars_prompt:
+  - name: mysql_root_password
+    prompt: please enter MySQL root password
+    private: no
+
   tasks: 
   - name: install MYSQL server
     ansible.builtin.dnf:
@@ -26,7 +31,7 @@
   - name: check DB connection 
     community.mysql.mysql_info:
       login _user: root
-      login _password: ExpenseApp@1
+      login _password: "{{ mysql_root_password }}"
       login_host: "{{ login_host }}"
       filter: version
     ignore_errors: yes
@@ -35,3 +40,8 @@
   - name: print output
     ansible.builtin.debug:
       msg: "output:  {{ mysql_connection_output }}"
+
+
+  - name: setup root password
+    ansible.builtin.command: "mysql_secure_installation --set-root-pass {{ mysql_root_password }}""
+    when: mysql_connection_output.failed is True
