--- a/db.yaml
+++ b/db.yaml
@@ -2,35 +2,36 @@
   hosts: db
   become: yes
   vars:
-    login_host: db.rlsu.shop
+   login_host: db.rlsu.shop
   vars_prompt:
   - name: mysql_root_password
     prompt: please enter MySQL root password
     private: no
-  tasks:
-  - name: Install MySQL Server
+
+  tasks: 
+  - name: install MYSQL server
     ansible.builtin.dnf:
       name: mysql-server
       state: latest
-
-  - name: Start and Enable MySQL server
+ 
+  - name: start and Enable MYSQL server
     ansible.builtin.service:
       name: mysqld
       state: started
-      enabled: yes
+      enables: yes
 
   - name: install python mysql dependencies
     ansible.builtin.pip:
-      name:
+      name: 
       - PyMySQL
       - cryptography
-      executable: pip3.9 # pip3.11 if python version is 3.11
+      executable: pip3.9
 
-  # check password is already setup or not
-  - name: check DB connection
+
+  - name: check DB connection 
     community.mysql.mysql_info:
-      login_user: root
-      login_password: "{{ mysql_root_password }}"
+      login _user: root
+      login _password: "{{ mysql_root_password }}"
       login_host: "{{ login_host }}"
       filter: version
     ignore_errors: yes
@@ -38,8 +39,9 @@
 
   - name: print output
     ansible.builtin.debug:
-      msg: "Output: {{mysql_connection_output}} "
+      msg: "output:  {{ mysql_connection_output }}"
+
 
   - name: setup root password
     ansible.builtin.command: "mysql_secure_installation --set-root-pass {{ mysql_root_password }}"
-    when: mysql_connection_output.failed is true # don't give {{ }} in when condition
+    when: mysql_connection_output.failed is true # don't give {{ }} in when condition 
