--- a/db.yaml
+++ b/db.yaml
@@ -43,3 +43,4 @@
   - name: setup root password
     ansible.builtin.command: "mysql_secure_installation --set-root-pass {{ mysql_root_password }}"
     when: mysql_connection_output.failed is true # don't give {{ }} in when condition
+    ignore_errors: yes
