--- a/backend.yaml
+++ b/backend.yaml
@@ -2,7 +2,8 @@
   become: yes
   hosts: backend
   vars:
-
+   login_host: db.rlsu.shop
+   login_password: ExpenseApp@1
 
   tasks:
   - name: disable default nodejs
@@ -42,3 +43,23 @@
     ansible.builtin.command: npm install
     args:
       chdir: /app 
+
+  - name: copy backend service
+    ansible.builtin.copy:
+      src: backend .service 
+      dest: /etc/systemd/system/backend.service
+ 
+  - name: install python mysql dependencies
+    ansible.builtin.pip:
+      name:
+      - PyMySQL 
+      - cryptography
+      executable: pip3.9 # pip3.11 if python version is 3.11
+
+  - name: import data into mysql
+    community.mysql.mysql_db:
+      login_user: root
+      login_password: "{{ login_password }}"
+      login_host: "{{ login_host }}"
+      target: /app/schema/backend.sql
+      state: import
