--- a/backend.yaml
+++ b/backend.yaml
@@ -15,8 +15,11 @@
 
   - name: install nodejs
     ansible.builtin.dnf:
-     name: nodejs
+     name: "{{ item }}"
      state: installed 
+    loop:
+    - nodejs
+    - mysql 
 
   - name: create expense user
     ansible.builtin.user:
@@ -64,4 +67,3 @@
       target: /app/schema/backend.sql
       state: import
       name: all
-      
