--- a/backend.yaml
+++ b/backend.yaml
@@ -67,3 +67,8 @@
       target: /app/schema/backend.sql
       state: import
       name: all
+
+
+  - name: daemon reload
+    ansible.builtin.systemd_services:
+     daemon_reload: true
