--- a/backend.yaml
+++ b/backend.yaml
@@ -70,5 +70,5 @@
 
 
   - name: daemon reload
-    ansible.builtin.systemd_services:
+    ansible.builtin.systemd_service:
       daemon_reload: true
