--- a/backend.yaml
+++ b/backend.yaml
@@ -72,3 +72,10 @@
   - name: daemon reload
     ansible.builtin.systemd_service:
       daemon_reload: true
+
+
+  - name: start and enable backend service
+    ansible.builtin.service:
+      name: backend 
+      state: started
+      enabled: yes
