--- a/frontend.yaml
+++ b/frontend.yaml
@@ -16,5 +16,5 @@
 
  - name: delete default website
    ansible.builtinfile:
-    path: /usr/share/nginx/html/
-     state: absent
+    path: /usr/share/nginx/html
+    state: absent
