--- a/frontend.yaml
+++ b/frontend.yaml
@@ -15,6 +15,6 @@
    
 
  - name: delete default website
-   ansible.builtinfile:
+   ansible.builtin.file:
      path: /usr/share/nginx/html
      state: absent
