--- a/frontend.yaml
+++ b/frontend.yaml
@@ -15,6 +15,19 @@
    
 
  - name: delete default website
-   ansible.builtin.file:
-     path: /usr/share/nginx/html
-     state: absent
+    ansible.builtin.file:
+      path: /usr/share/nginx/html
+      state: absent
+
+  - name: create html directory
+    ansible.builtin.file:
+      path: /usr/share/nginx/html
+      state: directory  
+
+  - name: download and extract frontend code 
+    ansible.builtin.unarchive:
+      src:  https://expense-builds.s3.us-east-1.amazonaws.com/expense-frontend-v2.zip
+      dest: /usr/share/nginx/html
+      remote_src: yes
+
+
